tests/baselines/reference/derivedClassOverridesWithoutSubtype.errors.txt
derivedClassOverridesWithoutSubtype.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
derivedClassOverridesWithoutSubtype.ts(8,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== derivedClassOverridesWithoutSubtype.ts (2 errors) ====
    class Base {
        x: {
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            foo: string;
        }
    }
    
    class Derived extends Base {
        x: {
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            foo: any;
        }
    }
    
    class Base2 {
        static y: {
            foo: string;
        }
    }
    
    class Derived2 extends Base2 {
        static y: {
            foo: any;
        }
    }